--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.14",
     "@nestjs/schedule": "^5.0.1",
+    "@nestjs/websockets": "^11.0.14",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
